# campus

src/command/: CMakeLists.txt  package.xml
src/command/msg/: turn.msg
src/command/src/: cmdvel.cpp  run.launch  skeyboard.cpp
src/mbot_description/config/: config.rviz  fake_mbot_arbotix.yaml  mbot_arbotix.rviz
src/mbot_description/launch/: arbotix_mbot.launch  start.launch
src/mbot_description/urdf/xacro/: camera.xacro  camera_sensor.xacro  lidar.xacro  lidar_sensor.xacro  mbot_base.xacro  move.xacro  my_car.xacro
src/mbot_description/world/: aaa.world  campus.world  campus_ll.world
src/mbot_description/world/campus/: model.sdf
src/nav_move/: CMakeLists.txt  package.xml
src/nav_move/config/: nav.rviz
src/nav_move/launch/: move_base.launch  nav_amcl.launch  nav_auto.launch  nav_map_read.launch  nav_map_save.launch  nav_path.launch  nav_slam.launch  nav_test.launch  slam_auto.launch  test_amcl.launch
src/nav_move/map/: my_map.pgm  my_map.yaml  nav.pgm  nav.yaml
src/nav_move/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/route_planning/: CMakeLists.txt  package.xml
src/route_planning/src/: Astar.cpp  Astar.h  basic_shapes.cpp  obstacle_talker.cpp  start.launch
